--- a/app/src/main/res/layout/item_vertical_recycler_view.xml
+++ b/app/src/main/res/layout/item_vertical_recycler_view.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="180dp"
+    android:layout_height="250dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardElevation="4dp"
     app:cardCornerRadius="16dp"
-    android:layout_margin="8dp">
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginVertical="16dp"
+    >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/item_recycler_view_image"
-            android:layout_width="210dp"
-            android:layout_height="280dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             tools:src="@drawable/fake"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
+            android:layout_weight="1"
             />
 
         <TextView
             android:id="@+id/item_recycler_view_title"
-            android:layout_width="194dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Vertical RecyclerView"
             android:textColor="#000000"
